--- a/app/desktop/tpl/system/para/add.html
+++ b/app/desktop/tpl/system/para/add.html
@@ -16,6 +16,7 @@
             <tr>
                 <td class="text-right"><label class="da-control-label required">参数编码：</label></td>
                 <td><input type="text" class="da-form-control" name="paraCode"
+                           data-timely="1"
                            data-rule='“参数编码”: required;remote(__CTX__/admin/checksysParaForm)'></td>
             </tr>
             <tr>
@@ -27,7 +28,7 @@
                 <td><input type="text" class="da-form-control" name="paraValue" data-rule='“参数值”: required'></td>
             </tr>
             <tr>
-                <td class="text-right"><label class="da-control-label required">可否编辑：</label></td>
+                <td class="text-right"><label class="da-control-label required">可否可编辑：</label></td>
                 <td>
                     <div class="da-form-radio">
                         <label><input type="radio" name="visiable" value="1" checked>是</label>
