--- a/app/desktop/tpl/system/menu/list.html
+++ b/app/desktop/tpl/system/menu/list.html
@@ -50,6 +50,16 @@
     .sysmenu-menuInfo {
         overflow: auto;
     }
+
+    [nodestatus="new"] > .jstree-anchor {
+        color: #e8bf6a;
+    }
+    [nodestatus="saved"] > .jstree-anchor {
+        color: #6a8759;
+    }
+    [nodestatus="moved"] > .jstree-anchor {
+        color: #9876aa;
+    }
 </style>
 <script>
     createSysMenu.defaultNode = {
@@ -61,7 +71,7 @@
              * "saved"：已保存，其sysMenu 存在 $li.data( "sysMenu" )
              */
 
-            "newnodestatus": "new"
+            "nodestatus": "new"
         }
     };
     function createSysMenu () {
@@ -78,7 +88,9 @@
             $unsavedNode,
             $prevNode
         ;
-        debugger;
+
+        // debugger;
+
         // 是否有未编辑（保存）的新建菜单
         $unsavedNode = $tree.find( ".jstree-node" ).filter( '[createnode="new"]' );
 
@@ -132,7 +144,7 @@
             $selectedNode
         ;
 
-        debugger;
+        // debugger;
 
         // 如果没有被选中的
         if ( selectedNodeIds.length === 0 ) {
@@ -145,8 +157,8 @@
 
         $sysmenuMenuInfo = $( ".sysmenu-menuInfo" );
 
-        // 新建的菜单
-        if ( $selectedNode.attr( "newnodestatus" ) === "new" ) {
+        // 新建的菜单：新增
+        if ( $selectedNode.attr( "nodestatus" ) === "new" ) {
             window.PKUI.component.Template.getModelAndView(
                 // viewUrl
                 "__CTX__/static/desktop/tpl/system/menu/add.html",
@@ -158,7 +170,7 @@
                 }
             );
         }
-        // 已存在的菜单
+        // 已存在的菜单：修改
         else {
             window.PKUI.component.Template.getModelAndView(
                 // viewUrl
@@ -194,15 +206,16 @@
                 ref = $tree.jstree( true ),
                 sysMenu = selected.node.data,
                 $selectedNode = ref.get_node( selected.node.id, true ),
-                newnodestatus = $selectedNode.attr( "newnodestatus" )
+                nodestatus = $selectedNode.attr( "nodestatus" )
             ;
-            // 新建 但未保存的，直接返回
-            if ( newnodestatus === "new" ) {
+            // 新建 但未保存的，则调用编辑
+            if ( nodestatus === "new" ) {
                 //layer.msg( "未保存的新建菜单不能查看详情页", { icon: 0 } );
+                editSysMenu();
                 return;
             }
             // 新建 且已保存，
-            else if ( newnodestatus === "saved" ) {
+            else if ( nodestatus === "saved" ) {
                 sysMenu = $selectedNode.data( "sysMenu" );
             }
 
