--- a/test/testJstree.html
+++ b/test/testJstree.html
@@ -17,7 +17,6 @@
 <div id="plugins3" class="demo plugin-demo">
 </div>
 <script>
-    jQuery(function () {
         jQuery("#plugins3").jstree({
             "core" : {
                 "data": [
@@ -31,7 +30,7 @@
                 ]
             }
         });
-    });
+        var ref = jQuery("#plugins3").jstree( true );
 </script>
 </body>
 </html>
