--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -122,7 +122,7 @@
                                      "src": "./tpl/system/index.html",
                                      "menuId": "2",
                                      "mode": "default"}'>
-                                <span class="launchpad-shortcut-icon"><i class="fa fa-home"></i></span>
+                                <span class="launchpad-shortcut-icon launchpad-shortcut-fonticon"><i class="fa fa-home"></i></span>
                                 <p class="launchpad-shortcut-title">单位管理</p></div>
 
                             <div class="launchpad-shortcut" data-pkui-app="true"
@@ -132,7 +132,7 @@
                                      "src": "./tpl/system/index.html",
                                      "menuId": "3",
                                      "mode": "default"}'>
-                                <span class="launchpad-shortcut-icon"><i class="fa fa-users"></i></span>
+                                <span class="launchpad-shortcut-icon launchpad-shortcut-fonticon"><i class="fa fa-users"></i></span>
                                 <p class="launchpad-shortcut-title">用户管理</p></div>
 
 
