--- a/app/desktop/tpl/system/role/edit.html
+++ b/app/desktop/tpl/system/role/edit.html
@@ -8,7 +8,7 @@
     <input type="hidden" name="roleId" value="{{ roleId }}" />
     <input type="hidden" name="roleLevel" value="{{ roleLevel }}" /> <!-- 角色暂不分级，默认为0 -->
 
-    <div class="da-form-heading">编辑角色</div>
+    <div class="da-form-heading"></div>
     <div class="da-form-body">
         <table class="da-form-table da-table da-table-striped">
             <colgroup>
@@ -50,11 +50,17 @@
                     containerId = $( "#editSysRoleLayer" ).closest( ".layui-layer" ).attr( "id" ),
                     containerIndex = containerId.replace( "layui-layer", "" )
                 ;
+                /**
+                 * @event saved.pkui.sysrole.tree
+                 *      保存成功
+                 */
+                $( "#sysrole-container" ).trigger( "saved.pkui.sysrole.tree" );
 
                 // 关闭提示
                 layer.close( index );
                 // 关闭容器
                 layer.close( parseInt( containerIndex ) );
+
             } );
         }
         // 服务器端处理失败
