--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -52,7 +52,7 @@
 
             <!-- 用户信息 -->
             <div class="topbar-toolbar-item topbar-toolbar-userItem dropdown">
-                <i class="fa fa-user-o" data-toggle="dropdown"></i> <span class="caret"></span>
+                <span data-toggle="dropdown"><i class="fa fa-user-o"></i> <span class="caret"></span></span>
                 <ul class="dropdown-menu">
                     <li class="dropdown-header"><i class="fa fa-user-o"></i> 管理员</li>
                     <li class="divider"></li>
