--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -51,16 +51,13 @@
             <!-- /搜索 -->
 
             <!-- 用户信息 -->
-            <div class="topbar-toolbar-item topbar-toolbar-userItem dropdown"
-                 onclick="handleUserDropdown(this)"
-                 data-current-sysuser-url="{% system.user.getCurrentSysUser %}">
+            <div class="topbar-toolbar-item topbar-toolbar-userItem dropdown" id="toolbarUserDropdown">
                 <span data-toggle="dropdown"><i class="fa fa-user-o"></i> <span class="caret"></span></span>
                 <ul class="dropdown-menu">
-                    <li class="dropdown-header"><i class="fa fa-user-o"></i>
-                        <span id="currentSysUserUserName">我是谁...<i class="fa fa-spinner fa-spin"></i></span></li>
+                    <li class="dropdown-header"><i class="fa fa-user-o"></i> <span id="toolbarUserDropdown-userName">我是谁...<i class="fa fa-spinner fa-spin"></i></span></li>
                     <li class="divider"></li>
-                    <li class="relative disabled"><a href="javascript:void(0);"><i class="fa fa-envelope-o"></i><span class="toolbar-msgItem-label">0</span> 我的消息</a></li>
-                    <li><a href="javascript:void(0);" onclick="existSystemAndGoToLogin();"><i class="fa fa-sign-out"></i> 退出系统</a></li>
+                    <li class="relative disabled"><a href="#"><i class="fa fa-envelope-o"></i><span class="toolbar-msgItem-label">0</span> 我的消息</a></li>
+                    <li id="toolbarUserDropdown-existSystem"><a href="#"><i class="fa fa-sign-out"></i> 退出系统</a></li>
                 </ul>
             </div>
             <!-- /用户信息 -->
