--- a/app/desktop/tpl/system/user/add.html
+++ b/app/desktop/tpl/system/user/add.html
@@ -48,8 +48,12 @@
 
                 <td class="text-right"><label class="da-control-label">身份证号：</label></td>
                 <td><input type="text" class="da-form-control" name="idcard"
-                           data-rule="“身份证号”: IDcard"
-                           data-pkui-component="textMagnifier"></td>
+                           data-rule="“身份证号”: IDcard(birthdayFieldName=csrq,genderFieldName=xb,addressCodeFieldName=sxxqdm)"
+                           data-pkui-component="textMagnifier">
+                    <!--
+                    <input type="text" name="csrq"> <input type="text" name="xb"> <input type="text" name="sxxqdm">
+                    -->
+                </td>
             </tr>
             <tr>
                 <td class="text-right"><label class="da-control-label required">用户类型：</label></td>
