--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -12,7 +12,8 @@
         data-main：当前应用的入口js文件
         data-timestamp: 时间戳（dev为开发模式），比如 data-timestamp="v=2017-02-27"
     -->
-    <script data-main="./js/main.js" data-timestamp="2017-09-01" src="../pkui/pkui.js"></script>
+    <script data-main="./js/main.js" data-timestamp="2017-09-20" src="../pkui/pkui.js"></script>
+    <link rel="stylesheet" href="css/common/message.css">
 </head>
 <body>
 
@@ -23,10 +24,14 @@
 <div class="da da-theme da-theme-light" id="da">
 
     <div class="da-top clearfix" id="daTop">
-        <div class="da-top-title"><img class="da-top-img" src="images/logo.jpg" alt="">PKUI操作系统</div>
-        <div class="da-top-info">
-            <div class="da-top-info-item"><i class="fa fa-user-o"></i> <span id="daTopUsername">我是谁...<i class="fa fa-spinner fa-spin"></i></span></div>
-            <div class="da-top-info-item"><i class="fa fa-home"></i> <span id="daTopDeptName">属于哪个单位...<i class="fa fa-spinner fa-spin"></i></span></div>
+        <div class="da-top-title"><img class="da-top-img" src="images/logo.png" alt="">PKUI操作系统</div>
+        <div class="da-top-aside">
+            <div class="da-top-asideItem da-top-dept"><i class="fa fa-home"></i> <span id="daTopDeptName">属于哪个单位...<i class="fa fa-spinner fa-spin"></i></span></div>
+            <div class="da-top-asideItem da-top-username"><i class="fa fa-user-o"></i> <span id="daTopUsername">我是谁...<i class="fa fa-spinner fa-spin"></i></span></div>
+            <div class="da-top-asideItem da-top-message clickable"><i class="fa fa-envelope-o"></i> 消息 <span class="caret"></span></div>
+            <div class="da-top-asideItem da-top-search clickable" id="da-top-search"><i class="fa fa-search"></i> 应用搜索</div>
+            <div class="da-top-asideItem da-top-modifyPassword clickable" id="da-top-modifyPassword"><i class="fa fa-key"></i> 修改密码</div>
+            <div class="da-top-asideItem da-top-exit clickable" id="da-top-exit"><i class="fa fa-sign-out"></i> 退出</div>
         </div>
     </div>
 
@@ -55,10 +60,11 @@
         <div class="topbar-toolbar">
 
             <!-- 搜索 common/app-search.js -->
-            <div class="topbar-toolbar-item" id="topbar-toolbar-search" title="应用搜索"><i class="fa fa-search"></i></div>
+            <!--<div class="topbar-toolbar-item" id="topbar-toolbar-search" title="应用搜索"><i class="fa fa-search"></i></div>-->
             <!-- /搜索 -->
 
             <!-- 用户信息 -->
+            <!--
             <div class="topbar-toolbar-item topbar-toolbar-userItem dropdown" id="toolbarUserDropdown">
                 <span data-toggle="dropdown"><i class="fa fa-user-o"></i> <span class="caret"></span></span>
                 <ul class="dropdown-menu">
@@ -69,6 +75,7 @@
                     <li id="toolbarUserDropdown-existSystem"><a href="#"><i class="fa fa-sign-out"></i> 退出系统</a></li>
                 </ul>
             </div>
+            -->
             <!-- /用户信息 -->
 
         </div>
@@ -85,6 +92,26 @@
             <!-- 显示区域 -->
             <div class="launchpad-view swiper-container">
                 <div class="launchpad-view-pageList swiper-wrapper hidden">
+
+                    <!--
+                        首页（启动页、第一页）
+                    -->
+                    <!--
+                    <div class="launchpad-view-pageItem swiper-slide">
+                        <div class="launchpad-starter"
+                             data-pkui-component="loadContent"
+                             data-pkui-component-options='{
+                                        "targetSelector": "default",
+                                        "loadContentFromWhichModuleId": "__CTX__/static/desktop/js/page/index/starter"
+                                     }'>
+                        </div>
+                    </div>
+                    -->
+
+
+
+                    <!-- 快捷方式页 -->
+
                     <div class="launchpad-view-pageItem swiper-slide">
                         <!--
                             快捷方式的配置参见：.../desktop/js/config/shortcut.js
@@ -95,9 +122,9 @@
                                 "targetSelector": "default",
                                 "loadContentFromWhichModuleId": "__CTX__/static/desktop/js/page/shortcut"
                              }'>
+                        </div>
 
                             <!--
-
                             <div class="launchpad-shortcut" data-pkui-app="true"
                                  data-pkui-app-options='{
                                      "icon": "./images/apps/gear.png",
@@ -108,10 +135,6 @@
                                 <img class="launchpad-shortcut-icon" src="./images/apps/gear.png" alt="">
                                 <p class="launchpad-shortcut-title">系统管理</p></div>
 
-
-                            -->
-
-                            <!--
                             <div class="launchpad-shortcut" data-pkui-app="true"
                                  data-pkui-app-options='{
                                     "icon": "./images/apps/app_02.png",
@@ -119,15 +142,10 @@
                                     "src": "http://www.baidu.com",
                                     "mode": "iframe"}'><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
                             -->
-                        </div>
+
                     </div>
+
                     <!--
-                    <div class="launchpad-view-pageItem swiper-slide">
-                        <div class="launchpad-shortcutpad">
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
-                            <div class="launchpad-LastShortcut-placeholder">&lt;!&ndash; 作为占位符使用，避免当页面只有一个快捷方式时，无法拖拽到别的页面去 &ndash;&gt;</div>
-                        </div>
-                    </div>
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-shortcutpad">
                             <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
